Add custom element dependencies

--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,8 @@
     "package.json"
   ],
   "devDependencies": {
+    "CustomElements": "~0.2.0",
+    "MutationObserver": "~0.2.0",
+    "WeakMap": "~0.2.0"
   }
 }
