--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "bower": "~1.3.2",
-    "jshint": "~2.5.0"
+    "bower": "1.3.2",
+    "jshint": "2.5.0",
+    "phantomjs": "1.9.7-4"
   }
 }
