--- a/.jshintrc
+++ b/.jshintrc
@@ -14,8 +14,5 @@
   "trailing": true,
   "boss": true,
   "eqnull": true,
-  "browser": true,
-  "globals": {
-    "moment": false
-  }
+  "browser": true
 }
