Ignore examples and tests

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
   },
   "ignore": [
     ".*",
+    ".md",
+    "examples/",
     "Makefile",
-    "package.json"
+    "package.json",
+    "test/"
   ]
 }
