--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "devDependencies": {
     "bower": "1.3.2",
     "jshint": "2.5.0",
-    "phantomjs": "1.9.7-4"
+    "node-qunit-phantomjs": "0.2.1"
   }
 }
