--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "local-time-element",
+  "name": "time-elements",
   "version": "0.0.0",
   "private": true,
   "main": "local-time-element.js",
