--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "private": true,
+  "name": "time-elements",
+  "version": "0.4.0",
+  "main": "time-elements.js",
   "devDependencies": {
     "bower": "1.3.8",
     "jshint": "2.5.2",
