--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.6.1",
   "main": "time-elements.js",
   "devDependencies": {
-    "bower": "1.3.8",
     "jshint": "2.5.2",
-    "node-qunit-phantomjs": "0.2.2"
+    "node-qunit-phantomjs": "0.2.2",
+    "qunitjs": "1.14.0",
+    "webcomponents.js": "0.7.23"
   }
 }
