Replace QUnit with Mocha & Chai

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.6.1",
   "main": "time-elements.js",
   "devDependencies": {
+    "chai": "^3.5.0",
     "jshint": "2.5.2",
-    "node-qunit-phantomjs": "0.2.2",
-    "qunitjs": "1.14.0",
+    "mocha": "^3.1.2",
+    "mocha-phantomjs-core": "^2.1.0",
     "webcomponents.js": "0.7.23"
   }
 }
