--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "eslint-plugin-github": "^0.6.1",
     "mocha": "^3.1.2",
     "mocha-phantomjs-core": "^2.1.0",
-    "webcomponents.js": "0.7.23"
+    "webcomponents.js": "^0.7.23"
   }
 }
