--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "time-elements",
   "version": "0.6.1",
-  "main": "time-elements.js",
+  "main": "dist/time-elements-legacy.js",
+  "jsnext:main": "dist/time-elements.js",
   "scripts": {
     "test": "make test"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
     "babel-plugin-transform-custom-element-classes": "^0.1.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.18.0",
     "babel-plugin-transform-es2015-classes": "^6.18.0",
@@ -16,6 +16,8 @@
     "mocha": "^3.1.2",
     "mocha-phantomjs-core": "^2.1.0",
     "phantomjs-prebuilt": "^2.1.13",
+    "rollup": "^0.36.4",
+    "rollup-plugin-babel": "^2.6.1",
     "webcomponents.js": "^0.7.23"
   }
 }
