--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.6.1",
   "main": "dist/time-elements-legacy.js",
   "jsnext:main": "dist/time-elements.js",
+  "license": "MIT",
   "scripts": {
     "clean": "rm -rf ./dist ./node_modules",
     "lint": "eslint src/ test/",
     "build": "rollup -c && rollup -c rollup.legacy-config.js",
     "pretest": "npm run lint && npm run build",
     "test": "karma start ./test/karma.config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/github/time-elements.git"
   },
   "devDependencies": {
     "babel-plugin-transform-custom-element-classes": "^0.1.0",
