--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "mocha": "^3.5.3",
     "rollup": "^0.36.4",
     "rollup-plugin-babel": "^2.6.1",
