--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-custom-element-classes": "^0.1.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.18.0",
     "babel-plugin-transform-es2015-classes": "^6.18.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "chai": "^3.5.0",
     "eslint": "^4.13.1",
     "eslint-plugin-github": "^0.20.0",
