--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "time-elements",
   "version": "1.0.2",
   "main": "dist/time-elements-legacy.js",
+  "module": "dist/time-elements.js",
   "jsnext:main": "dist/time-elements.js",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf ./dist ./node_modules",
     "lint": "eslint src/ test/",
-    "build": "rollup -c && rollup -c rollup.legacy-config.js",
+    "build": "rollup -c",
     "prepublishOnly": "npm run pretest",
     "pretest": "npm run lint && npm run build",
     "test": "karma start ./test/karma.config.js"
@@ -30,7 +31,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "mocha": "^3.5.3",
-    "rollup": "^0.36.4",
+    "rollup": "^0.57.1",
     "rollup-plugin-babel": "^2.6.1",
     "webcomponents.js": "^0.7.23"
   }
