--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
   },
   "repository": "github/time-elements",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "chai": "^4.1.2",
-    "eslint": "^5.4.0",
-    "eslint-plugin-github": "^1.2.1",
-    "karma": "^3.0.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.12.0",
+    "eslint-plugin-github": "^1.6.1",
+    "karma": "^3.1.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "mocha": "^5.2.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup": "^1.0.2",
+    "rollup-plugin-babel": "^4.2.0",
     "webcomponents.js": "^0.7.23"
   }
 }
