--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "repository": "github/time-elements",
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "babel-preset-github": "^2.1.1",
     "chai": "^4.2.0",
     "eslint": "^5.12.0",
-    "eslint-plugin-github": "^1.6.1",
+    "eslint-plugin-github": "^1.9.0",
     "karma": "^3.1.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
