Type check with Flow

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,15 @@
 {
   "extends": [
     "plugin:github/browser",
-    "plugin:github/es6"
+    "plugin:github/es6",
+    "plugin:github/flow"
   ],
   "parser": "babel-eslint",
   "overrides": [
     {
       "files": "test/**/*.js",
       "rules": {
+        "flowtype/require-valid-file-annotation": "off",
         "github/unescaped-html-literal": "off"
       }
     }
