--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf ./dist ./node_modules",
-    "lint": "eslint .",
+    "lint": "github-lint",
     "build": "rollup -c",
     "prepublishOnly": "npm run pretest",
     "pretest": "npm run lint && npm run build",
@@ -15,11 +15,11 @@
   "repository": "github/time-elements",
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "babel-preset-github": "^2.1.1",
+    "babel-preset-github": "^2.1.2",
     "chai": "^4.2.0",
     "eslint": "^5.12.0",
     "eslint-plugin-github": "^1.9.0",
+    "flow-bin": "^0.93.0",
     "karma": "^3.1.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -30,5 +30,7 @@
     "rollup-plugin-babel": "^4.2.0",
     "webcomponents.js": "^0.7.23"
   },
-  "eslintIgnore": ["dist/"]
+  "eslintIgnore": [
+    "dist/"
+  ]
 }
