--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rm -rf ./dist ./node_modules",
     "lint": "github-lint",
-    "build": "rollup -c",
+    "build": "rollup -c && cp src/index.js.flow dist/time-elements.js.flow && cp src/index.js.flow dist/time-elements-legacy.js.flow",
     "prepublishOnly": "npm run pretest",
     "pretest": "npm run lint && npm run build",
     "test": "karma start ./test/karma.config.js"
