--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "time-elements",
-  "version": "2.0.2",
+  "version": "3.0.0-beta.1",
   "main": "dist/time-elements-legacy.js",
   "module": "dist/time-elements.js",
   "license": "MIT",
