--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "time-elements",
+  "name": "@github/time-elements",
   "version": "3.0.0",
   "main": "dist/time-elements-legacy.js",
   "module": "dist/time-elements.js",
