--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "dist/time-elements-legacy.js",
   "module": "dist/time-elements.js",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "github-lint",
