--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "3.0.3",
   "main": "dist/time-elements-legacy.js",
   "module": "dist/time-elements.js",
+  "types": "index.d.ts",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "index.d.ts"
   ],
   "scripts": {
     "clean": "rm -rf dist",
