--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,17 @@
 {
   "root": true,
-  "extends": [
-    "plugin:github/browser",
-    "plugin:github/recommended",
-    "plugin:github/typescript"
-  ],
+  "extends": ["plugin:github/browser", "plugin:github/recommended", "plugin:github/typescript"],
+  "rules": {
+    "import/extensions": ["error", "always"],
+    "import/no-unresolved": "off"
+  },
   "overrides": [
     {
       "files": "test/**/*.js",
       "rules": {
-        "github/unescaped-html-literal": "off"
+        "github/unescaped-html-literal": "off",
+        "github/no-inner-html": "off",
+        "i18n-text/no-en": "off"
       }
     },
     {
