switch from karma to web-test-runner
Co-authored-by: Kristján Oddsson <koddsson@gmail.com>

--- a/package.json
+++ b/package.json
@@ -17,23 +17,19 @@
     "build": "tsc && rollup -c",
     "prepublishOnly": "npm run build",
     "pretest": "npm run build",
-    "test": "TZ=Asia/Dubai karma start ./test/karma.config.cjs",
+    "test": "web-test-runner",
     "postpublish": "npm publish --ignore-scripts --@github:registry='https://npm.pkg.github.com'"
   },
   "prettier": "@github/prettier-config",
   "repository": "github/time-elements",
   "devDependencies": {
     "@github/prettier-config": "0.0.4",
-    "chai": "^4.3.6",
-    "chromium": "^3.0.3",
+    "@open-wc/testing": "^3.1.6",
+    "@web/dev-server-esbuild": "^0.3.2",
+    "@web/test-runner": "^0.14.0",
+    "@web/test-runner-playwright": "^0.8.10",
     "eslint": "^8.22.0",
     "eslint-plugin-github": "^4.3.7",
-    "karma": "^6.4.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "mocha": "^10.0.0",
     "rollup": "^2.78.1",
     "typescript": "^4.7.4"
   },
