--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "es2020",
     "target": "es2017",
     "strict": true,
+    "moduleResolution": "node",
     "declaration": true,
     "outDir": "dist",
     "lib": ["es2020.intl", "dom", "dom.iterable", "es2020"],
