--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint . --ext .js,.ts && tsc --noEmit",
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "npm run clean && npm run lint && mkdir dist",
-    "build": "tsc && rollup -c",
+    "bundle": "esbuild --bundle dist/index.js --keep-names --outfile=dist/index.js --allow-overwrite --format=esm",
+    "build": "tsc && npm run bundle",
     "prepublishOnly": "npm run build",
     "pretest": "npm run build",
     "test": "web-test-runner",
@@ -28,9 +29,9 @@
     "@web/dev-server-esbuild": "^0.3.2",
     "@web/test-runner": "^0.14.0",
     "@web/test-runner-playwright": "^0.8.10",
+    "esbuild": "^0.15.11",
     "eslint": "^8.22.0",
     "eslint-plugin-github": "^4.3.7",
-    "rollup": "^2.78.1",
     "typescript": "^4.7.4"
   },
   "eslintIgnore": [
