--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.6.4",
     "@github/prettier-config": "0.0.4",
+    "@js-temporal/polyfill": "^0.4.3",
     "@open-wc/testing": "^3.1.6",
     "@web/dev-server-esbuild": "^0.3.2",
     "@web/test-runner": "^0.14.0",
