--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
   "repository": "github/time-elements",
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.6.4",
-    "@github/prettier-config": "0.0.4",
+    "@github/prettier-config": "^0.0.6",
     "@js-temporal/polyfill": "^0.4.3",
     "@open-wc/testing": "^3.1.6",
     "@web/dev-server-esbuild": "^0.3.2",
-    "@web/test-runner": "^0.14.0",
-    "@web/test-runner-playwright": "^0.8.10",
-    "esbuild": "^0.15.11",
-    "eslint": "^8.22.0",
-    "eslint-plugin-github": "^4.3.7",
-    "typescript": "^4.7.4"
+    "@web/test-runner": "^0.15.0",
+    "@web/test-runner-playwright": "^0.9.0",
+    "esbuild": "^0.15.18",
+    "eslint": "^8.29.0",
+    "eslint-plugin-github": "^4.4.1",
+    "typescript": "^4.9.3"
   },
   "eslintIgnore": [
     "dist/"
