setup npm provenance

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -19,6 +22,24 @@ jobs:
       - run: npm version ${TAG_NAME} --git-tag-version=false
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
-      - run: npm whoami; npm --ignore-scripts publish
+
+      # Provenance beta builds
+      # Remove when stable
+      - name: Clone npm
+        uses: actions/checkout@v3
+        with:
+          repository: npm/cli
+          ref: provenance
+          path: npm
+      - name: Link npm
+        run: |
+          cd npm
+          node . link
+          cd ..
+          npm version
+      # Provenance beta builds
+      # Remove when stable
+
+      - run: npm whoami; npm --ignore-scripts publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
