--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,19 +51,17 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Checkout ref
-        uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
-          registry-url: https://registry.npmjs.org/
+          registry-url: https://npm.pkg.github.com
           cache: npm
-      - name: Install npm depencies
-        run: npm ci
-      - name: Build package
-        run: npm run build
-      - name: Publish
-        run: npm publish
+      - run: npm ci
+      - run: npm test
+      - run: npm version ${TAG_NAME} --git-tag-version=false
+        env:
+          TAG_NAME: ${{ github.event.release.tag_name }}
+      - run: npm whoami; npm --ignore-scripts publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
