upgrade eslint and friends

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,21 @@
 {
   "root": true,
-  "extends": ["plugin:github/browser", "plugin:github/recommended", "plugin:github/typescript"],
+  "extends": [
+    "plugin:github/browser",
+    "plugin:github/recommended",
+    "plugin:github/typescript",
+    "plugin:custom-elements/recommended"
+  ],
   "rules": {
+    "custom-elements/tag-name-matches-class": [
+      "error",
+      {
+        "suffix": "Element"
+      }
+    ],
+    "custom-elements/define-tag-after-class-definition": "off",
+    "custom-elements/no-method-prefixed-with-on": "off",
+    "custom-elements/expose-class-on-global": "off",
     "import/extensions": ["error", "always"],
     "import/no-unresolved": "off"
   },
@@ -18,16 +32,9 @@
         "github/unescaped-html-literal": "off",
         "github/no-inner-html": "off",
         "i18n-text/no-en": "off"
-      }
-    },
-    {
-      "files": "test/**/*.js",
-      "excludedFiles": "test/karma.config.cjs",
+      },
       "env": {
         "mocha": true
-      },
-      "globals": {
-        "assert": true
       }
     }
   ]
