--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "prettier": "@github/prettier-config",
   "repository": "github/relative-time-element",
   "devDependencies": {
-    "@custom-elements-manifest/analyzer": "^0.6.4",
+    "@custom-elements-manifest/analyzer": "^0.8.0",
     "@github/prettier-config": "^0.0.6",
     "@js-temporal/polyfill": "^0.4.3",
     "@open-wc/testing": "^3.1.6",
@@ -40,8 +40,9 @@
     "@web/test-runner": "^0.15.0",
     "@web/test-runner-playwright": "^0.9.0",
     "esbuild": "^0.15.18",
-    "eslint": "^8.29.0",
-    "eslint-plugin-github": "^4.4.1",
+    "eslint": "^8.38.0",
+    "eslint-plugin-custom-elements": "^0.0.8",
+    "eslint-plugin-github": "^4.7.0",
     "typescript": "^4.9.3"
   },
   "eslintIgnore": [
