Overhaul duration calculation functions.
For "x days ago", a new standalone function is made that takes the original
dates into account. For durations, the rounding to nearest unit function now
works in a more consistent way.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "eslint . --ext .js,.ts && tsc --noEmit",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "eslint . --ext .js,.ts --fix",
     "prebuild": "npm run clean && npm run lint && mkdir dist",
     "bundle": "esbuild --bundle dist/index.js --keep-names --outfile=dist/bundle.js --format=esm",
     "build": "tsc && npm run bundle && npm run manifest",
