--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
-        node-version: 18.x
+        node-version: 22
     - name: npm install, build, and test
       run: |
         npm it
