--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "eslint-plugin-github": "^4.7.0",
     "typescript": "^5.0.4"
   },
+  "peerDependencies": {
+    "@types/react": "18 || 19"
+  },
   "eslintIgnore": [
     "dist/"
   ],
