--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@github/relative-time-element",
-  "version": "0.0.0-development",
+  "version": "4.5.0",
   "main": "dist/bundle.js",
   "type": "module",
   "module": "dist/index.js",
