feat: export duration module
Export the duration module, allowing the utility to be used without the HTML element

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "exports": {
     ".": "./dist/index.js",
     "./define": "./dist/index.js",
+    "./duration": "./dist/duration.js",
     "./relative-time": "./dist/relative-time-element.js",
     "./relative-time/define": "./dist/relative-time-element-define.js"
   },
